--- a/Application/React/cupid/src/Components/LoginPopup/LoginPopup.css
+++ b/Application/React/cupid/src/Components/LoginPopup/LoginPopup.css
@@ -1,80 +1,109 @@
 .login-popup-wrap {
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    display: flex;
-    overflow: hidden;
-    justify-content: center;
-    align-items: center;
-    z-index: 4;
-    background: rgba(0, 0, 0, 0.56);
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  display: flex;
+  overflow: hidden;
+  justify-content: center;
+  align-items: center;
+  z-index: 4;
+  background: rgba(0, 0, 0, 0.56);
 }
 
 .login-popup {
-    width: 25vw;
-    background: #121418;
-    height: auto;
-    display: flex;
-    border-radius: 10px;
-    padding: 5% 4%;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
+  width: 25vw;
+  background: #121418;
+  height: auto;
+  display: flex;
+  border-radius: 10px;
+  padding: 5% 4%;
+  flex-direction: column;
+  position: relative;
+  text-align: center;
 }
 
-.login-popup input[type="email"], [type="password"], [type="text"] {
-    background: #000000;
-    height: 43px;
-    border-radius: 11px;
-    margin: 6px;
-    color: white;
-    padding: 0% 9%;
-    box-sizing: border-box;
-    width: 250px;
-    border: 1px solid #4c2d2d;
+.login-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.login-popup input[type="email"],
+.login-popup input[type="password"],
+.login-popup input[type="text"] {
+  background: #000000;
+  height: 43px;
+  width: 100%;
+  max-width: 428px;
+  border-radius: 11px;
+  margin: 6px;
+  color: white;
+  padding: 0% 9%;
+  box-sizing: border-box;
+  border: 1px solid #4c2d2d;
 }
 
 .login-popup .btn {
-    width: 200px;
-    height: 44px;
-    margin: 18px auto 0px auto;
-    background: #ea5e6c;
+  width: 100%;
+  max-width: 200px;
+  height: 44px;
+  margin: 18px auto 0px auto;
+  background: #ea5e6c;
 }
 
 .login-popup .btn:hover {
-    box-shadow: inset 1px 1px 20px 5px #683e3e
+  box-shadow: inset 1px 1px 20px 5px #683e3e
 }
 
 .login-popup .errors {
-    text-align: center;
-    color: #ff4653;
+  text-align: center;
+  color: #ff4653;
+  min-height: 75px;
+}
+
+.login-register {
+  font-size: 13px;
+}
+
+.login-register a {
+  color: #ea5e6c;
+  text-decoration: none;
+}
+
+.login-register a:hover {
+  text-decoration: underline;
 }
 
 .close {
-    position: absolute;
-    right: 32px;
-    top: 32px;
-    width: 32px;
-    height: 32px;
-    opacity: 0.6;
-    cursor: pointer;
-  }
-  .close:hover {
-    opacity: 1;
-  }
-  .close:before, .close:after {
-    position: absolute;
-    left: 15px;
-    content: ' ';
-    height: 33px;
-    width: 2px;
-    background-color: #d9676f;
-  }
-  .close:before {
-    transform: rotate(45deg);
-  }
-  .close:after {
-    transform: rotate(-45deg);
-  }
+  position: absolute;
+  right: 32px;
+  top: 32px;
+  width: 32px;
+  height: 32px;
+  opacity: 0.6;
+  cursor: pointer;
+}
+
+.close:hover {
+  opacity: 1;
+}
+
+.close:before,
+.close:after {
+  position: absolute;
+  left: 15px;
+  content: ' ';
+  height: 33px;
+  width: 2px;
+  background-color: #d9676f;
+}
+
+.close:before {
+  transform: rotate(45deg);
+}
+
+.close:after {
+  transform: rotate(-45deg);
+}
