--- a/Application/React/cupid/src/Components/RegisterProcess/RegisterProcess.css
+++ b/Application/React/cupid/src/Components/RegisterProcess/RegisterProcess.css
@@ -37,6 +37,7 @@ span.progress-bar {
     z-index: 2;
     border-radius: 10px 27px 27px 10px;
     background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(234, 94, 108, 1) 50%, rgba(255, 0, 69, 1) 100%);
+    transition: width 0.5s ease;
 }
 
 .form-register {
@@ -68,4 +69,20 @@ span.progress-bar {
     margin-left: auto;
     margin-right: 10%;
     margin-bottom: 20px;
+}
+
+.verify-screen {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.verify-load {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.verify-load img {
+    height: 100px;
 }
