--- a/Application/React/cupid/src/App.css
+++ b/Application/React/cupid/src/App.css
@@ -31,10 +31,10 @@
   }
 
   .section-blank {
-    padding: 0 8%;
-    min-height: 100%;
-    display: flex;
-    flex-direction: column;
+      padding: 0 8%;
+      min-height: 100%;
+      display: flex;
+      flex-direction: column;
   }
 
   .white {
@@ -47,6 +47,7 @@
 
   .side {
       grid-column: 1;
+      grid-row: 1 / 3;
       background: #323745;
       display: flex;
       flex-direction: column;
@@ -66,7 +67,7 @@
   }
 
   .nav li {
-    margin-bottom: 12px;
+      margin-bottom: 12px;
   }
 
   .nav li a {
@@ -124,7 +125,7 @@
   #user-actions {
       display: none;
   }
-  
+
 
   .content {
       grid-column: 2;
@@ -134,9 +135,25 @@
   }
 
   .footer {
-    width: 100vw;
-    height: 201px;
-    background: #333744;
-    grid-row: 2;
-    grid-column: 1 / 2;
-}
+      width: 100vw;
+      height: 201px;
+      background: #333744;
+      grid-row: 2;
+      grid-column: 1 / 2;
+  }
+
+  /* errors */
+  .error-container {
+      /* margin-bottom: 12px; */
+  }
+
+  .error-popup {
+      background: #ff5959;
+      position: absolute;
+      width: -webkit-fill-available;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 999;
+  }
