--- a/Application/React/cupid/src/App.css
+++ b/Application/React/cupid/src/App.css
@@ -65,6 +65,7 @@ body {
     font-weight: 900;
     color: #e9e0e0f7;
     gap: 17px;
+    z-index: 2;
 }
 
 .side-logo {
@@ -196,6 +197,10 @@ body {
     min-height: 100vh;
     justify-content: center;
     align-items: center;
+    background-color: white;
+    background-image: url(https://railvision.io/wp-content/themes/railvision/images/home-intro-overlay-1.png);
+    background-position: bottom;
+    background-size: cover;
 }
 
 .profile-card {
@@ -204,6 +209,7 @@ body {
     border-radius: 15px;
     width: 30vw;
     background: linear-gradient(347deg, rgb(103 95 246) 0%, rgba(234, 94, 108, 1) 50%, rgba(255, 0, 69, 1) 100%);
+    box-shadow: 0px 0px 14px 5px black;
     overflow: hidden;
 }
 
@@ -211,7 +217,7 @@ body {
     /* height: 420px; */
     height: 55vh;
     background-size: cover !important;
-    background-position: bottom !important;
+    background-position: center !important;
     background: #cad6ff30;
 }
 
