--- a/Application/React/cupid/src/App.css
+++ b/Application/React/cupid/src/App.css
@@ -214,6 +214,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    z-index: 4;
 }
 
 .profile-locked .btn {
